<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:id="@+id/textReadme1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:typeface="serif"
    android:textStyle="bold"
    android:textSize="25sp"
    android:textColor="#000000"
    android:text="@string/text_readme1"
    android:textAlignment="center"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="78dp" />



    <TextView
        android:id="@+id/textReadme2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/text_readme2"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="5sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textReadme3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/text_readme3"
        android:layout_marginLeft="15sp"
        android:layout_below="@+id/textReadme2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="111dp"
        android:layout_height="148dp"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/chat5"
        android:layout_below="@+id/textReadme1"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"/>




</RelativeLayout>