<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textToast1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="@string/text_toast1"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />

    <TextView
        android:id="@+id/textToast2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="serif"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/text_toast2"
        android:textAlignment="center"
        android:layout_below="@+id/textToast1"
        android:layout_marginTop="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_button"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textToast2"
        android:layout_marginTop="40sp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nyancat1"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_toast"
        android:layout_alignStart="@+id/button_toast"
        android:layout_below="@+id/button_toast"
        android:layout_marginBottom="30sp"
        android:layout_alignRight="@+id/button_toast"
        android:layout_alignEnd="@+id/button_toast" />
</RelativeLayout>